--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
-    <link rel="stylesheet" href="/.assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>::: TIPO2 :::</title>
 </head>
 <body>
@@ -45,13 +45,13 @@ December 2019, finally TIPO was open to the public delivering <br>a biga dough w
 </div>
 <div id="pizza" class="container-fluid row">
   <div class="col-sm-4">
-    <img src="/.assets/images/pizza1.jpg" alt="Pizza" style="width:100%">
+    <img src="./assets/images/pizza1.jpg" alt="Pizza" style="width:100%">
   </div>
  <div class="col-sm-4">
-    <img src="/.assets/images/pizza4.jpg" alt="Pizza Crudo" style="width:100%">
+    <img src="./assets/images/pizza4.jpg" alt="Pizza Crudo" style="width:100%">
   </div>
   <div class="col-sm-4">
-    <img src="/.assets/images/pizzaoutside.jpg" alt="Pizza Outside" style="width:100%">
+    <img src="./assets/images/pizzaoutside.jpg" alt="Pizza Outside" style="width:100%">
   </div>
 </div>
 
