--- a/workwithus.html
+++ b/workwithus.html
@@ -48,7 +48,8 @@
                <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Tell us about yourself" required></textarea>
                <div class="form-row text-center">
                  <div class="col">
-                   <label for="myfile">Select your CV</label>
+                   <label for="myfile">Select your CV
+                   </label>
                    <input type="file" id="myfile" name="myfile">
                  </div>
                </div>
