--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <h3 class="contact-details">BOOKING <br> RESERVATIONS</h3>
       <p>PHONE : <a href="tel:+44338283929">+44 338283929</a></p>
       <p>EMAIL : <a href="mailto:info@tipo2.co.uk">info@tipo2.co.uk</a></p>
-      <p>OPENTABLE :<a href="https://www.opentable.co.uk/?lang=it"> : T I P O 2 : </a> </p>
+      <p>OPENTABLE :<a href="https://www.opentable.co.uk/?lang=it" target="_blank"> : T I P O 2 : </a> </p>
     </div>
     <div class="col-sm-4">
       <h3 class="contact-details">LOCATION <br> ADDRESS</h3>
