--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="hero-image">
   <div class="hero-text1 text-center">
     <h1>T   I   P   O  2  </h1>
-    <a href="https://www.opentable.co.uk/?lang=it" class="myButton">Book Your Table</a>
+    <a href="https://www.opentable.co.uk/?lang=it" class="myButton" target="_blank">Book Your Table</a>
   </div>
 </div>
 
